# Coc9

./: 06.xlsx  CoordinateSystem.py  EventPyghelpers.py  ExcleMagr.py  MathsCalculation.py  README.md  ScienceExpressions.py  Scroller.py  TestFile.py  UsrGuide.py  buttoncenter.py  checkbox.py  choices_center.py  complex.py  data.txt  error_log.txt  func_tests.py  main.py  matrix.py  progress_bar.py  pygame_test.py  pyproject.toml  requirements.txt  statistics.py  tests.py  uv.toml  vector.py
ComplexFiles/: .CocComplexInfo  changed.CocComplexInfo
MatrixFiles/: 1.CocMatrixInfo  4.CocMatrixInfo  None.CocMatrixInfo  big_one.CocMatrixInfo  matrix.CocMatrixInfo
TableViewer/: Example.py  Panel.py  Table.py
VectorFiles/: test.CocVectorInfo
